# UaRates

./: .flake8  .gitignore  Dockerfile  README.md  main.py  pyproject.toml  requirements.txt  uarates.py
tests/: test_main.py  test_uarates.py
