[tool.poetry]
name = "uarates"
version = "1.0.1"
description = "Extraction of official FX rates of National Bank of Ukraine"
authors = ["AndyFX <vba2you@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
openpyxl = "^3.0.9"
requests = "^2.27.1"
pandas = "^1.4.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
